--- a/app/src/main/res/layout/activity_add_friend.xml
+++ b/app/src/main/res/layout/activity_add_friend.xml
@@ -17,11 +17,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/button_search"/>
-    <fragment
-        android:name="com.example.gymbuddy.FriendListFragment"
+    <LinearLayout
         android:id="@+id/fragmentFriendList"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
