--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -25,24 +25,22 @@
                 android:textSize="@dimen/regular_textSize"
                 android:text="@string/placeholder"/>
         </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/choose_your_location"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="horizontal">
-            <TextView
-                android:id="@+id/your_location"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Your location: "
-                android:textSize="@dimen/regular_textSize" />
-            <EditText
-                android:id="@+id/welcome_location"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="@dimen/regular_textSize"
-                android:hint="Location"/>
-        </LinearLayout>
+            android:text="Choose Your Location: "
+            android:textSize="@dimen/regular_textSize" />
+        <AutoCompleteTextView
+            android:id="@+id/location_autocomplete"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"></AutoCompleteTextView>
+    </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
