--- a/app/src/main/res/layout/friend_row.xml
+++ b/app/src/main/res/layout/friend_row.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="0.3"
-        tools:srcCompat="@tools:sample/avatars" />
+        app:srcCompat="@android:drawable/sym_def_app_icon" />
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
