--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="title_textSize">32dp</dimen>
     <dimen name="regular_textSize">24dp</dimen>
+    <dimen name="regular_marginTop">50dp</dimen>
 </resources>
