--- a/app/src/main/res/layout/activity_friend_profile.xml
+++ b/app/src/main/res/layout/activity_friend_profile.xml
@@ -26,6 +26,12 @@
         android:text="No Gym"
         android:textSize="@dimen/regular_textSize"/>
     <TextView
+        android:id="@+id/friendProfileDescription"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="No Description"
+        android:textSize="@dimen/regular_textSize"/>
+    <TextView
         android:id="@+id/friendProfileEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
