--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -76,6 +76,24 @@
                 android:textSize="@dimen/regular_textSize"
                 android:hint="Location"/>
         </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/your_description"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Description"
+            android:textSize="@dimen/regular_textSize" />
+        <EditText
+            android:id="@+id/welcome_description"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/regular_textSize"
+            android:hint="Location"/>
+    </LinearLayout>
         <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
