--- a/app/src/main/res/layout/activity_random_matching.xml
+++ b/app/src/main/res/layout/activity_random_matching.xml
@@ -16,22 +16,61 @@
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/dumbell_human" />
     <TextView
-        android:id="@+id/random_match_profile_name"
-        android:layout_marginTop="@dimen/regular_marginTop"
+        android:id="@+id/random_match_description"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/Description"/>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray"/>
+    <TextView
+        android:id="@+id/random_match_profile_description"
         android:textSize="@dimen/regular_textSize"
         android:text="@string/placeholder"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+    <TextView
+        android:id="@+id/random_match_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/Name"/>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray"/>
+    <TextView
+        android:id="@+id/random_match_profile_name"
+        android:textSize="@dimen/regular_textSize"
+        android:text="@string/placeholder"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+    <TextView
+        android:id="@+id/random_match_location"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/Location"/>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray"/>
     <TextView
         android:id="@+id/random_match_profile_location"
-        android:layout_marginTop="@dimen/regular_marginTop"
         android:textSize="@dimen/regular_textSize"
         android:text="@string/placeholder"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
     <TextView
+        android:id="@+id/random_match_gym"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/Gym"/>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray"/>
+    <TextView
         android:id="@+id/random_match_profile_gym"
-        android:layout_marginTop="@dimen/regular_marginTop"
         android:textSize="@dimen/regular_textSize"
         android:text="@string/placeholder"
         android:layout_width="wrap_content"
@@ -41,7 +80,7 @@
         android:text="@string/Yes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/regular_marginTop"
+        android:layout_marginTop="@dimen/small_marginTop"
         />
     <Button
         android:id="@+id/random_match_profile_no"
