--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -27,32 +27,38 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
+            android:gravity="left"
             android:orientation="horizontal">
+
             <TextView
                 android:id="@+id/welcome_intro"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/autour_one"
                 android:text="Welcome: "
-                android:textSize="@dimen/regular_textSize" />
+                android:textSize="20sp" />
+
             <TextView
                 android:id="@+id/welcome_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/regular_textSize"
-                android:text="@string/placeholder"/>
+                android:fontFamily="@font/autour_one"
+                android:text="@string/placeholder"
+                android:textSize="20sp" />
         </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
+        android:gravity="left"
         android:orientation="horizontal">
+
         <TextView
             android:id="@+id/choose_your_location"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/autour_one"
             android:text="Choose Your Location: "
-            android:textSize="@dimen/regular_textSize" />
+            android:textSize="20sp" />
         <AutoCompleteTextView
             android:id="@+id/location_autocomplete"
             android:layout_width="fill_parent"
@@ -61,46 +67,55 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
+            android:gravity="left"
             android:orientation="horizontal">
+
             <TextView
                 android:id="@+id/your_gym"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/autour_one"
                 android:text="Your Gym: "
-                android:textSize="@dimen/regular_textSize" />
+                android:textSize="20sp" />
+
             <EditText
                 android:id="@+id/welcome_gym"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/regular_textSize"
-                android:hint="Location"/>
+                android:fontFamily="@font/autour_one"
+                android:hint="Gym Name"
+                android:textSize="20sp" />
         </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="vertical">
+        android:gravity="left"
+        android:orientation="horizontal">
+
         <TextView
             android:id="@+id/your_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Description"
-            android:textSize="@dimen/regular_textSize" />
+            android:fontFamily="@font/autour_one"
+            android:text="Description: "
+            android:textSize="20sp" />
+
         <EditText
             android:id="@+id/welcome_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/regular_textSize"
-            android:hint="Location"/>
+            android:fontFamily="@font/autour_one"
+            android:hint="@string/Description"
+            android:textSize="20sp" />
     </LinearLayout>
         <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="50dp"
                 android:padding="10dp"
+
                 android:text="Save"
-            android:textSize="@dimen/regular_textSize"
+                android:textSize="@dimen/regular_textSize"
                 android:id="@+id/saveProfile_button"/>
 
     <LinearLayout
@@ -113,8 +128,10 @@
             android:id="@+id/bottom_navigation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/blush_pinkSecondary"
             app:labelVisibilityMode="labeled"
-            app:menu="@menu/bottom_navigation_menu" />
+            app:menu="@menu/bottom_navigation_menu"
+            app:itemTextAppearance="@style/menu_text_style"/>
     </LinearLayout>
 
 </LinearLayout>
