--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,45 +7,61 @@
     android:gravity="center"
     android:orientation="vertical"
     tools:context=".HomeActivity">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/homeProfileImage"
+            android:layout_width="110dp"
+            android:layout_height="110dp"
+            android:scaleType="fitXY"
+            app:srcCompat="@android:drawable/sym_def_app_icon" />
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/homeProfileImage"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:srcCompat="@android:drawable/sym_def_app_icon" />
+            android:orientation="horizontal">
             <Button
                 android:id="@+id/changeProfileImage"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/changeProfile_button"/>
+                android:text="@string/changeProfile_button" />
+            <Button
+                android:id="@+id/uploadProfileImage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/uploadProfile_button"/>
         </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="left"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/welcome_intro"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="left"
-            android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/welcome_intro"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/autour_one"
-                android:text="Welcome: "
-                android:textSize="20sp" />
+            android:text="Welcome: "
+            android:textSize="20sp" />
 
-            <TextView
-                android:id="@+id/welcome_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/autour_one"
-                android:text="@string/placeholder"
-                android:textSize="20sp" />
-        </LinearLayout>
+        <TextView
+            android:id="@+id/welcome_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:text="@string/placeholder"
+            android:textSize="20sp" />
+    </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -56,36 +72,36 @@
             android:id="@+id/choose_your_location"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/autour_one"
             android:text="Choose Your Location: "
             android:textSize="20sp" />
+
         <AutoCompleteTextView
             android:id="@+id/location_autocomplete"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"></AutoCompleteTextView>
     </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="left"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/your_gym"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="left"
-            android:orientation="horizontal">
+            android:text="Your Gym: "
+            android:textSize="20sp" />
 
-            <TextView
-                android:id="@+id/your_gym"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/autour_one"
-                android:text="Your Gym: "
-                android:textSize="20sp" />
+        <EditText
+            android:id="@+id/welcome_gym"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="Gym Name"
+            android:textSize="20sp" />
+    </LinearLayout>
 
-            <EditText
-                android:id="@+id/welcome_gym"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/autour_one"
-                android:hint="Gym Name"
-                android:textSize="20sp" />
-        </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -96,7 +112,6 @@
             android:id="@+id/your_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/autour_one"
             android:text="Description: "
             android:textSize="20sp" />
 
@@ -104,34 +119,34 @@
             android:id="@+id/welcome_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/autour_one"
             android:hint="@string/Description"
             android:textSize="20sp" />
     </LinearLayout>
-        <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="50dp"
-                android:padding="10dp"
 
-                android:text="Save"
-                android:textSize="@dimen/regular_textSize"
-                android:id="@+id/saveProfile_button"/>
+    <Button
+        android:id="@+id/saveProfile_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:padding="10dp"
+        android:text="Save"
+        android:textSize="@dimen/regular_textSize" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_weight="1"
         android:gravity="center|bottom"
-        android:orientation="vertical"
-        android:layout_weight="1">
+        android:orientation="vertical">
+
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottom_navigation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/blush_pinkSecondary"
+            app:itemTextAppearance="@style/menu_text_style"
             app:labelVisibilityMode="labeled"
-            app:menu="@menu/bottom_navigation_menu"
-            app:itemTextAppearance="@style/menu_text_style"/>
+            app:menu="@menu/bottom_navigation_menu" />
     </LinearLayout>
 
 </LinearLayout>
