--- a/app/src/main/res/layout/message_row.xml
+++ b/app/src/main/res/layout/message_row.xml
@@ -41,7 +41,7 @@
                 android:id="@+id/messagebox_textview_readCounterLeft"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="1"
+                android:text="@string/one"
                 android:textSize="9dp"
                 android:textColor="@color/purple_200"
                 android:visibility="invisible"
@@ -51,14 +51,14 @@
                 android:id="@+id/messagebox_textview_msg"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="-"
+                android:text="@string/minus"
                 />
 
             <TextView
                 android:id="@+id/messagebox_textview_readCounterRight"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="1"
+                android:text="@string/one"
                 android:textSize="9dp"
                 android:textColor="@color/purple_200"
                 android:visibility="invisible"
@@ -76,7 +76,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
                 android:textSize="9sp"
-                android:text="-"
+                android:text="@string/minus"
                 />
         </LinearLayout>
     </LinearLayout>
