--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -6,6 +6,10 @@
         android:title="Home"
         />
     <item
+        android:id="@+id/menu_onermcalculator"
+        android:enabled="true"
+        android:title="@string/OneRM"/>
+    <item
         android:id="@+id/menu_randomMatching"
         android:enabled="true"
         android:title="Random"/>
