--- a/app/src/main/res/layout/activity_friend_profile.xml
+++ b/app/src/main/res/layout/activity_friend_profile.xml
@@ -7,6 +7,11 @@
     android:orientation="vertical"
     android:gravity="center"
     tools:context=".FriendProfileActivity">
+    <ImageView
+        android:id="@+id/friendProfileImage"
+        android:layout_width="110dp"
+        android:layout_height="110dp"
+        android:scaleType="fitXY" />
 
     <TextView
         android:id="@+id/friendProfileName"
