dimension in different file allocation

--- a/app/src/main/res/layout/activity_add_friend.xml
+++ b/app/src/main/res/layout/activity_add_friend.xml
@@ -27,7 +27,7 @@
         android:textStyle="bold" />
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="@dimen/onedp"
         android:background="@android:color/darker_gray"/>
     <LinearLayout
         android:id="@+id/fragmentFriendList"
@@ -42,7 +42,7 @@
         android:textStyle="bold" />
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="@dimen/onedp"
         android:background="@android:color/darker_gray"/>
     <LinearLayout
         android:id="@+id/fragmentPendingRequests"
@@ -57,7 +57,7 @@
         android:textStyle="bold" />
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="@dimen/onedp"
         android:background="@android:color/darker_gray"/>
     <LinearLayout
         android:id="@+id/fragmentPendingInvites"
