--- a/app/src/main/res/layout/activity_friend_profile.xml
+++ b/app/src/main/res/layout/activity_friend_profile.xml
@@ -9,8 +9,8 @@
     tools:context=".FriendProfileActivity">
     <ImageView
         android:id="@+id/friendProfileImage"
-        android:layout_width="110dp"
-        android:layout_height="110dp"
+        android:layout_width="@dimen/profileImageDp"
+        android:layout_height="@dimen/profileImageDp"
         android:scaleType="fitXY" />
 
     <TextView
@@ -55,7 +55,7 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="@dimen/twohundreddp"
         android:orientation="horizontal">
         <Button
             android:id="@+id/removeFriendButton"
