--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -11,14 +11,14 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="@dimen/fivedp"
         android:gravity="center"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/homeProfileImage"
-            android:layout_width="110dp"
-            android:layout_height="110dp"
+            android:layout_width="@dimen/profileImageDp"
+            android:layout_height="@dimen/profileImageDp"
             android:scaleType="fitXY"
             app:srcCompat="@android:drawable/sym_def_app_icon" />
         <LinearLayout
@@ -73,7 +73,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/ChooseYourLocationColon"
-            android:textSize="20sp" />
+            android:textSize="@dimen/txtsp" />
 
         <AutoCompleteTextView
             android:id="@+id/location_autocomplete"
@@ -92,14 +92,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/YourGymColon"
-            android:textSize="20sp" />
+            android:textSize="@dimen/txtsp" />
 
         <EditText
             android:id="@+id/welcome_gym"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="@string/GymNameColon"
-            android:textSize="20sp" />
+            android:textSize="@dimen/txtsp" />
     </LinearLayout>
 
     <LinearLayout
@@ -113,22 +113,22 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/DescriptionColon"
-            android:textSize="20sp" />
+            android:textSize="@dimen/txtsp" />
 
         <EditText
             android:id="@+id/welcome_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="@string/Description"
-            android:textSize="20sp" />
+            android:textSize="@dimen/txtsp" />
     </LinearLayout>
 
     <Button
         android:id="@+id/saveProfile_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:padding="10dp"
+        android:layout_marginTop="@dimen/regular_marginTop"
+        android:padding="@dimen/tendp"
         android:text="@string/Save"
         android:textSize="@dimen/regular_textSize" />
 
