--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,20 +14,20 @@
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-condensed"
         android:text="@string/app_title"
-        android:textSize="55sp"
+        android:textSize="@dimen/fivefivesp"
         android:textStyle="" />
 
     <ImageView
-        android:layout_width="150dp"
-        android:layout_height="131dp"
-        android:layout_marginTop="50dp"
+        android:layout_width="@dimen/dumbellhumanwidth"
+        android:layout_height="@dimen/dumbellhumanheight"
+        android:layout_marginTop="@dimen/regular_marginTop"
         android:src="@drawable/dumbell_human" />
 
     <Button
         android:id="@+id/GoogleAuthButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="@dimen/regular_marginTop"
         android:text="@string/google_login"
         android:textSize="@dimen/title_textSize" />
 
