--- a/app/src/main/res/layout/activity_random_matching.xml
+++ b/app/src/main/res/layout/activity_random_matching.xml
@@ -11,8 +11,8 @@
 
     <ImageView
         android:id="@+id/random_match_profile_image"
-        android:layout_width="110dp"
-        android:layout_height="110dp"
+        android:layout_width="@dimen/profileImageDp"
+        android:layout_height="@dimen/profileImageDp"
         android:scaleType="fitXY"
         android:layout_marginTop="@dimen/regular_marginTop"
         app:srcCompat="@drawable/dumbell_human" />
@@ -25,7 +25,7 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="@dimen/onedp"
         android:background="@android:color/darker_gray" />
 
     <TextView
@@ -43,7 +43,7 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="@dimen/onedp"
         android:background="@android:color/darker_gray" />
 
     <TextView
@@ -61,7 +61,7 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="@dimen/onedp"
         android:background="@android:color/darker_gray" />
 
     <TextView
@@ -79,7 +79,7 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="@dimen/onedp"
         android:background="@android:color/darker_gray" />
 
     <TextView
